--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -591,9 +591,9 @@ p
 
 ```
 
-In the graph above, the relationship between Dutch media coverage (both newspaper, TV and online) and political cynicism amongst the public (from 1 -totally disagree- to 7 -totally agree-) is plotted over time. The graph shows that the amount of Dutch articles about the 2014 EU Elections does not have a direct influence on political cynicism amongst the public. This contradicts the second-level agenda setting theory, which implies that media influence how the public perceives certain topics (such as politics). 
+In the graph above, the relationship between Dutch media coverage (both newspaper, TV and online) and political cynicism amongst the public (from 1 -totally disagree- to 7 -totally agree-) is plotted over time. The graph shows that the number of Dutch articles about the 2014 EU Elections does not have a direct influence on political cynicism amongst the public. This contradicts the second-level agenda setting theory, which implies that media influence how the public perceives certain topics (such as politics). 
 
-When critically assessing the graph, some uncertainty problems arise. First of all, political cynicism has only been measured in the four-wave panel survey, thus, political cynicism is not continously measured over time. Therefore it cannot be concluded with full confidence that there is an absence of the (second-level) agenda setting effect. Besides, article-attributes (e.g. the content and sentiment) are not taken into account within this analysis and it also remains unclear whether the survey-respondets were actually exposed to the media content or not. These two factors might play an important (moderating) role in the influence of media coverage on political cynicism. In future research, these factors could be taken into account.
+When critically assessing the graph, some uncertainty problems arise. First of all, political cynicism has only been measured in the four-wave panel survey, thus, political cynicism is not continuously measured over time. Therefore, it cannot be concluded with full confidence that there is an absence of the (second-level) agenda setting effect. Besides, article-attributes (e.g. the content and sentiment) have not been taken into account within this analysis. These factors might play an important (moderating) role in the influence of media coverage on political cynicism. In future research, these factors could be taken into account.
 
 ## Matteo Rinaldi
 ### Political Knowledge and Anti-Immigrant attitudes: what relationship?
